<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.eclipse.digitaltwin.basyx</groupId>
        <artifactId>basyx.parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>basyx.opc2aas</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.32</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.14</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.1.3-jre</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.milo</groupId>
            <artifactId>sdk-client</artifactId>
            <version>0.6.11</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.3</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>model</artifactId>
            <version>1.0.0-milestone-03.1</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-core</artifactId>
            <version>1.0.0-milestone-03.1</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-json</artifactId>
            <version>1.0.0-milestone-03.1</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-aasx</artifactId>
            <version>1.0.0-milestone-03.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.6.4</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>2.6.4</version>
        </dependency>

        <!--  Submodel Repository  -->
        <dependency>
            <groupId>org.eclipse.digitaltwin.basyx</groupId>
            <artifactId>basyx.submodelrepository.component</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.basyx</groupId>
            <artifactId>basyx.submodelrepository-backend-inmemory</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.basyx</groupId>
            <artifactId>basyx.submodelrepository-http</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <!--  AAS4J  -->
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>model</artifactId>
            <version>1.0.0-milestone-04</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-core</artifactId>
            <version>1.0.0-milestone-04</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-json</artifactId>
            <version>1.0.0-milestone-04</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.digitaltwin.aas4j</groupId>
            <artifactId>dataformat-aasx</artifactId>
            <version>1.0.0-milestone-04</version>
        </dependency>
    </dependencies>
</project>